gccida/g1/emit_cmp_and_jump_insns
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3819:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3821:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3827:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v9; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3837:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3842:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3845:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v27; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3851:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3864:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // [rsp+14h] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3866:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v49; // [rsp+20h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3868:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pmode; // [rsp+28h] [rbp-50h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3869:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+2Ch] [rbp-4Ch] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3891:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v9 = mode_class_0[pmode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3911:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( __int64)v8[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3915:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( __int64)v7[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3927:31: error: use of undeclared identifier 'insn_data_0'
v19 = *( ( unsigned __int16 *)insn_data_0[1203].operand + 8); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3954:62: error: invalid suffix 'xmode' on integer constant
emit_library_call( libfunc, LCT_CONST_MAKE_BLOCK, *(short *)0xmode, 2, v7, ( unsigned int)pmode, v8, ( unsigned int)pmode); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3955:31: error: invalid suffix 'xmode' on integer constant
v29 = gen_reg_rtx( *(short *)0xmode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3956:38: error: invalid suffix 'xmode' on integer constant
v30 = hard_libcall_value( *(short *)0xmode); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/optabs.c:3960:20: error: invalid suffix 'xmode' on integer constant
pmode = *(short *)0xmode; 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_cmp_and_jump_insns/src/obj/optabs.o] Error 1
